# uni-data-mining

./: .tool-versions  Makefile  README.md  pyproject.toml  requirements.txt
app/: constants.py  eda.py  main.py  preprocessing.py  train.py  utils.py
